--- a/rankts/package.json
+++ b/rankts/package.json
@@ -42,9 +42,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "gh-pages": "^6.3.0"
   }
 }
