--- a/rankts/package.json
+++ b/rankts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rankts",
   "version": "0.1.0",
-  "homepage": "https://www.rankts.com",
+  "homepage": "www.rankts.com",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
